--- a/src/php.ini
+++ b/src/php.ini
@@ -3,6 +3,7 @@ extension="sqlsrv.so"
 [PHP]
 expose_php = Off
 memory_limit = 512M
+max_input_vars = 5000
 post_max_size = 1G
 upload_max_filesize = 1G
 
